episode3_Setup_Ingress/coffee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
  namespace: mycluster
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: nginxdemos/nginx-hello
        ports:
        - containerPort: 8080
