episode3_Setup_Ingress/4-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: main
  namespace: mycluster
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    kubernetes.io/ingress.class: "openresty"
spec:
  rules:
  - host: teamdev.ir
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
